<resources>
    <string name="app_name">ProjectNasa</string>
    <string name="bottom_navigation_bar">bottom navigation bar</string>
    <string name="ellipsis">&#8230;</string>
    <string name="curiosity">Curiosity</string>
    <string name="opportunity">Opportunity</string>
    <string name="spirit">Spirit</string>
    <string name="filter">filter</string>
    <string name="photos">Mars Photos</string>
    <string name="done">Done</string>
    <string name="filter_by_camera_type">Filter by camera type</string>
    <string name="gallery_picture">gallery picture</string>
    <string name="details">Details</string>
    <string name="close">Close</string>
    <string name="got_it">Got it!</string>
    <string name="red_planet">Red Planet</string>
    <string name="enter_sol_value_here">Enter sol value here</string>

    <string-array name="cameras">
        <item>FHAZ - Front Hazard Avoidance Camera</item>
        <item>RHAZ - Rear Hazard Avoidance Camera</item>
        <item>MAST - Mast Camera</item>
        <item>CHEMCAM - Chemistry and Camera Complex</item>
        <item>MAHLI - Mars Hand Lens Imager</item>
        <item>MARDI - Mars Descent Imager</item>
        <item>NAVCAM - Navigation Camera</item>
        <item>PANCAM - Panoramic Camera</item>
        <item>MINITES - Miniature Thermal Emission Spectrometer</item>
    </string-array>
</resources>