<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".presentation.activity.HomeActivity">

    <TextView
        android:id="@+id/tvLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/jost_semi_bold"
        android:text="@string/red_planet"
        android:textColor="@color/orange"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btChangeSolValue"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_button_filter"
        android:contentDescription="@string/filter"
        android:src="@drawable/ic_calendar"
        app:layout_constraintEnd_toStartOf="@id/btFilter"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/gray" />

    <ImageButton
        android:id="@+id/btClearFilter"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/bg_button_filter"
        android:backgroundTint="@color/gray"
        android:contentDescription="@string/filter"
        android:src="@drawable/ic_close"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@id/btChangeSolValue"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/orange" />

    <ImageButton
        android:id="@+id/btFilter"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:background="@drawable/bg_button_filter"
        android:contentDescription="@string/filter"
        android:src="@drawable/ic_filter_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/gray" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@id/tbBottomTabBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLabel"
        tools:visibility="gone">

        <include
            layout="@layout/recyclerview_loading_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_columnWeight="1" />
    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPhotos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/tbBottomTabBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLabel" />

    <com.metin.projectnasa.presentation.component.bottomtabbar.BottomTabBar
        android:id="@+id/tbBottomTabBar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:contentDescription="@string/bottom_navigation_bar"
        app:backgroundColor="@color/orange"
        app:itemFontFamily="@font/jost_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_navigation_bar" />
</androidx.constraintlayout.widget.ConstraintLayout>