<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivPhoto"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:contentDescription="@string/photos"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/labelDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/jost_medium"
            android:text="@string/details"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivPhoto" />

        <LinearLayout
            android:id="@+id/detailsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/labelDetails">

            <TextView
                android:id="@+id/tvDatePhotoTaken"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jost_regular"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvRoverName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jost_regular"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvRoverStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jost_regular"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvCameraType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jost_regular"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvLaunchDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jost_regular"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvLandingDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jost_regular"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_button_filter"
            android:text="@string/got_it"
            android:textAllCaps="false"
            android:textColor="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailsContainer" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>